<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    android:orientation="vertical">

    <TextView
        android:id="@+id/shownPopUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textColor="#FFF200"
        android:textSize="16sp"
        android:textStyle="bold"
        android:autoLink="web"
        />

    <Button
        android:id="@+id/yelpAccept"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/buttons"
        android:text="Accept"
        />
</LinearLayout>